# academic-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
claude-integration/: INTEGRATION.md
claude-integration/rules/: literature-notes.md
claude-integration/skills/: SKILL-academic-cite.md  SKILL-literature-search.md  SKILL-paper-deep-read.md  SKILL-rag-search.md  SKILL-reading-inbox.md
examples/: advanced_usage.py  quickstart.py
rag/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  indexer.py  pdf_parser.py  reranker.py  retriever.py
scripts/: build_vector_index.py  citation_finder.py
